# CTFTime-Integration

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  poc.ipynb  pyproject.toml
artifacts/: events.xlsx
bot/: bot.py  ctf.py  main.py  package.py  responses.py
ctftime_integration/: main.py  package.py
ctftime_integration/artifacts/: events.xlsx
